prodcut categories added  below navbar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="./assets/css/universal.css">
     <link rel="stylesheet" href="./assets/css/navbar.css">
+    <link rel="stylesheet" href="./assets/css/categories.css">
 
     <!-- google icons link -->
 
@@ -148,6 +149,88 @@
         </div>
 
     </header>
+
+
+    <!-- navbar completed -->
+
+
+    <!-- categories -->
+
+    <section id="product-categories">
+
+        <div class="categories-container">
+
+            <div id="category-items">
+
+                <div class="category-item"><img class="category-image" src="/assets/images/categories/Top_Offers.png"
+                        alt="Top Offers">
+                    <div class="category-item-name">
+                        Top Offers
+                    </div>
+                </div>
+
+                <div class="category-item"><img class="category-image" src="/assets/images/categories/grocery.png" alt="Grocery">
+                    <div class="category-item-name">
+                        Grocery
+                    </div>
+                </div>
+
+                <div class="category-item"><img class="category-image" src="/assets/images/categories/Mobiles.png" alt="Mobiles">
+                    <div class="category-item-name">
+                        Mobiles
+                    </div>
+                </div>
+
+                <div class="category-item"><img class="category-image" src="/assets/images/categories/fashion.png" alt="fashion">
+                    <div class="category-item-name">
+                        Fashion<span class="material-symbols-outlined nav-icons">expand_more</span>
+                    </div>
+
+                </div>
+
+                <div class="category-item"><img class="category-image" src="/assets/images/categories/electronics.png"
+                        alt="electronics">
+                    <div class="category-item-name">
+                        Elcetronics<span class="material-symbols-outlined nav-icons">expand_more</span>
+                    </div>
+
+                </div>
+
+                <div class="category-item"><img class="category-image" src="/assets/images/categories/Home.png" alt="Home">
+                    <div class="category-item-name">
+                        Home<span class="material-symbols-outlined nav-icons">expand_more</span>
+                    </div>
+
+                </div>
+
+                <div class="category-item"><img class="category-image" src="/assets/images/categories/appliances.png"
+                        alt="appliances">
+                    <div class="category-item-name">
+                        Appliances
+                    </div>
+                </div>
+
+                <div class="category-item"><img class="category-image" src="/assets/images/categories/travel.png" alt="travel">
+                    <div class="category-item-name">
+                        Travel
+                    </div>
+                </div>
+
+                <div class="category-item"><img class="category-image" src="/assets/images/categories/Beauty__Toys_and_more.png"
+                        alt="Beauty,Toys and more">
+                    <div class="category-item-name">
+                        Beauty, Toys & more<span class="material-symbols-outlined nav-icons">expand_more</span>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- categories completed -->
 
 </body>
 </html>
