--- a/index.html
+++ b/index.html
@@ -162,61 +162,61 @@
 
             <div id="category-items">
 
-                <div class="category-item"><img class="category-image" src="/assets/images/categories/Top_Offers.png"
+                <div class="category-item"><img class="category-image" src="./assets/images/categories/Top_Offers.png"
                         alt="Top Offers">
                     <div class="category-item-name">
                         Top Offers
                     </div>
                 </div>
 
-                <div class="category-item"><img class="category-image" src="/assets/images/categories/grocery.png" alt="Grocery">
+                <div class="category-item"><img class="category-image" src="./assets/images/categories/grocery.png" alt="Grocery">
                     <div class="category-item-name">
                         Grocery
                     </div>
                 </div>
 
-                <div class="category-item"><img class="category-image" src="/assets/images/categories/Mobiles.png" alt="Mobiles">
+                <div class="category-item"><img class="category-image" src="./assets/images/categories/Mobiles.png" alt="Mobiles">
                     <div class="category-item-name">
                         Mobiles
                     </div>
                 </div>
 
-                <div class="category-item"><img class="category-image" src="/assets/images/categories/fashion.png" alt="fashion">
+                <div class="category-item"><img class="category-image" src="./assets/images/categories/fashion.png" alt="fashion">
                     <div class="category-item-name">
                         Fashion<span class="material-symbols-outlined nav-icons">expand_more</span>
                     </div>
 
                 </div>
 
-                <div class="category-item"><img class="category-image" src="/assets/images/categories/electronics.png"
+                <div class="category-item"><img class="category-image" src="./assets/images/categories/electronics.png"
                         alt="electronics">
                     <div class="category-item-name">
-                        Elcetronics<span class="material-symbols-outlined nav-icons">expand_more</span>
+                        Electronics<span class="material-symbols-outlined nav-icons">expand_more</span>
                     </div>
 
                 </div>
 
-                <div class="category-item"><img class="category-image" src="/assets/images/categories/Home.png" alt="Home">
+                <div class="category-item"><img class="category-image" src="./assets/images/categories/Home.png" alt="Home">
                     <div class="category-item-name">
                         Home<span class="material-symbols-outlined nav-icons">expand_more</span>
                     </div>
 
                 </div>
 
-                <div class="category-item"><img class="category-image" src="/assets/images/categories/appliances.png"
+                <div class="category-item"><img class="category-image" src="./assets/images/categories/appliances.png"
                         alt="appliances">
                     <div class="category-item-name">
                         Appliances
                     </div>
                 </div>
 
-                <div class="category-item"><img class="category-image" src="/assets/images/categories/travel.png" alt="travel">
+                <div class="category-item"><img class="category-image" src="./assets/images/categories/travel.png" alt="travel">
                     <div class="category-item-name">
                         Travel
                     </div>
                 </div>
 
-                <div class="category-item"><img class="category-image" src="/assets/images/categories/Beauty__Toys_and_more.png"
+                <div class="category-item"><img class="category-image" src="./assets/images/categories/Beauty__Toys_and_more.png"
                         alt="Beauty,Toys and more">
                     <div class="category-item-name">
                         Beauty, Toys & more<span class="material-symbols-outlined nav-icons">expand_more</span>
