left-right carousel buttons added / made changes on  dropdown button of navbar

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <li class="dropdown">
                     <a href="#" class="nav-link ">
                         <span class="nav-span-text">More</span>
-                        <span class="material-symbols-outlined nav-icons">expand_more</span>
+                        <span class="material-symbols-outlined nav-icons expand-icon">expand_more</span>
                            
                     </a>
                     <ul class="dropdown-items">
@@ -245,6 +245,17 @@
 
         <div id="product-list-1" class="main-container-grid-item">
 
+            <div class="left-control">
+                <span class="material-symbols-outlined">
+                    chevron_left
+                    </span>
+            </div>
+            <div class="right-control">
+                <span class="material-symbols-outlined">
+                    chevron_right
+                    </span>
+            </div>
+
             <div class="product-list-header">
 
                 <div class="best-deal-and-time ">
@@ -374,6 +385,8 @@
         <!-- Product-List 2 for Books and Music instruments Items -->
 
         <div id="product-list-2" class="main-container-grid-item">
+
+            
 
             <div class="product-list-header">
 
