Carousel added on product list 1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="index.js" defer></script>
     <!-- Title and Favicon -->
 
     <title>FlipKart</title>
@@ -245,12 +246,12 @@
 
         <div id="product-list-1" class="main-container-grid-item">
 
-            <div class="left-control">
+            <div id="left-control" class="left-control">
                 <span class="material-symbols-outlined">
                     chevron_left
                     </span>
             </div>
-            <div class="right-control">
+            <div id="right-control" class="right-control">
                 <span class="material-symbols-outlined">
                     chevron_right
                     </span>
@@ -454,6 +455,111 @@
                         <div class="product-list-item-name">Literature books</div>
                         <div class="product-list-item-discount">From &#8377 200</div>
                         <div class="product-list-item-type">Shop Now</div>
+
+                    </div>
+                </div>
+
+                <div class="product-list-item">
+
+                    <img src="./assets/images/main-container/guitar.jpg" alt="Guitar">
+                    <div class="product-list-item-info">
+
+                        <div class="product-list-item-name">Guitars</div>
+                        <div class="product-list-item-discount">Upto 60% off</div>
+                        <div class="product-list-item-type">Shop Now</div>
+
+                    </div>
+                </div>
+
+                <div class="product-list-item">
+
+                    <img src="./assets/images/main-container/flutes.jpg" alt="book">
+                    <div class="product-list-item-info">
+
+                        <div class="product-list-item-name">Flutes</div>
+                        <div class="product-list-item-discount">Min. 50% Off</div>
+                        <div class="product-list-item-type">Shop Now</div>
+
+                    </div>
+                </div>
+
+                <div class="product-list-item">
+                    <img src="./assets/images/main-container/Educational books.jpg" alt="Educational Book">
+                    <div class="product-list-item-info">
+
+                        <div class="product-list-item-name">Educational Books</div>
+                        <div class="product-list-item-discount">Upto 50% Off</div>
+                        <div class="product-list-item-type">Explore Now!</div>
+
+                    </div>
+                </div>
+
+                <div class="product-list-item">
+
+                    <img src="./assets/images/main-container/guitar.jpg" alt="Guitar">
+                    <div class="product-list-item-info">
+
+                        <div class="product-list-item-name">Guitars</div>
+                        <div class="product-list-item-discount">Upto 60% off</div>
+                        <div class="product-list-item-type">Shop Now</div>
+
+                    </div>
+                </div>
+
+                <div class="product-list-item">
+
+                    <img src="./assets/images/main-container/flutes.jpg" alt="book">
+                    <div class="product-list-item-info">
+
+                        <div class="product-list-item-name">Flutes</div>
+                        <div class="product-list-item-discount">Min. 50% Off</div>
+                        <div class="product-list-item-type">Shop Now</div>
+
+                    </div>
+                </div>
+
+                <div class="product-list-item">
+                    <img src="./assets/images/main-container/Educational books.jpg" alt="Educational Book">
+                    <div class="product-list-item-info">
+
+                        <div class="product-list-item-name">Educational Books</div>
+                        <div class="product-list-item-discount">Upto 50% Off</div>
+                        <div class="product-list-item-type">Explore Now!</div>
+
+                    </div>
+                </div>
+
+                <div class="product-list-item">
+
+                    <img src="./assets/images/main-container/guitar.jpg" alt="Guitar">
+                    <div class="product-list-item-info">
+
+                        <div class="product-list-item-name">Guitars</div>
+                        <div class="product-list-item-discount">Upto 60% off</div>
+                        <div class="product-list-item-type">Shop Now</div>
+
+                    </div>
+                </div>
+
+                <div class="product-list-item">
+
+                    <img src="./assets/images/main-container/flutes.jpg" alt="book">
+                    <div class="product-list-item-info">
+
+                        <div class="product-list-item-name">Flutes</div>
+                        <div class="product-list-item-discount">Min. 50% Off</div>
+                        <div class="product-list-item-type">Shop Now</div>
+
+                    </div>
+                </div>
+
+                <div class="product-list-item">
+                    <img src="./assets/images/main-container/Educational books.jpg" alt="Educational Book">
+                    <div class="product-list-item-info">
+
+                        <div class="product-list-item-name">Educational Books</div>
+                        <div class="product-list-item-discount">Upto 50% Off</div>
+                        <div class="product-list-item-type">Explore Now!</div>
 
                     </div>
                 </div>
